--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,3 +47,50 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ghcr.io/whaleopop/anecode-frontend:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup SSH Keys and known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Start ssh-agent and add SSH key
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add ~/.ssh/id_rsa
+
+      - name: Install sshpass
+        run: sudo apt-get install sshpass
+
+      - name: Execute remote commands with sshpass
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD}}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          if ! id -u deploy_user &>/dev/null; then
+            useradd -m deploy_user
+            echo "deploy_user:password" | chpasswd
+            usermod -aG docker deploy_user
+          fis
+          EOF
+
+      - name: Stop and delete existing Docker container
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          if docker ps -a --format '{{.Names}}' | grep -Eq '^docker-db$'; then
+            docker stop docker-db && docker rm docker-db
+          fi
+          EOF
+
+      - name: Pull and deploy new Docker container
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          docker pull ${{ env.IMAGE_NAME }}::latest
+          EOF
