--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,8 +59,8 @@ jobs:
       - name: Setup SSH Keys and known_hosts
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
 
       - name: Add host to known_hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
@@ -68,12 +68,12 @@ jobs:
       - name: Debug SSH Setup
         run: |
           ls -la ~/.ssh
-          cat ~/.ssh/id_rsa || echo "SSH private key is invalid or missing"
+          cat ~/.ssh/id_ed25519 || echo "SSH private key is invalid or missing"
 
       - name: Start ssh-agent and add SSH key
         run: |
           eval $(ssh-agent -s)
-          ssh-add ~/.ssh/id_rsa
+          ssh-add ~/.ssh/id_ed25519
 
       - name: Install sshpass
         run: sudo apt-get install sshpass
