--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,48 +56,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup SSH Keys and known_hosts
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/rsa
-          chmod 600 ~/.ssh/rsa
+      - name: Install sshpass
+        run: sudo apt-get install -y sshpass
 
       - name: Add host to known_hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-        
-      - name: Debug SSH Setup
-        run: |
-          ls -la ~/.ssh
-          cat ~/.ssh/rsa || echo "SSH private key is invalid or missing"
 
-      - name: Start ssh-agent and add SSH key
+      - name: Ensure deploy user exists and configure Docker access
         run: |
-          eval $(ssh-agent -s)
-          ssh-add ~/.ssh/rsa
-
-      - name: Install sshpass
-        run: sudo apt-get install sshpass
-
-      - name: Execute remote commands with sshpass
-        run: |
-          sshpass -p "${{ secrets.SSH_PASSWORD}}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
           if ! id -u deploy_user &>/dev/null; then
             useradd -m deploy_user
             echo "deploy_user:password" | chpasswd
             usermod -aG docker deploy_user
-          fis
+          fi
           EOF
 
       - name: Stop and delete existing Docker container
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-          if docker ps -a --format '{{.Names}}' | grep -Eq '^docker-db$'; then
-            docker stop docker-db && docker rm docker-db
+          if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-frontend$'; then
+            docker stop anecode-frontend && docker rm anecode-frontend
           fi
           EOF
 
       - name: Pull and deploy new Docker container
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-          docker pull ${{ env.IMAGE_NAME }}::latest
+          docker pull ${{ env.IMAGE_NAME }}:latest
+          docker run -d --name anecode-frontend -p 80:80 ${{ env.IMAGE_NAME }}:latest
           EOF
