--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,6 @@ on:
       - frontend
 
 env:
-  REGISTRY: ghcr.io
   IMAGE_NAME: ghcr.io/whaleopop/anecode-frontend
 
 jobs:
@@ -16,19 +15,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: ${{ env.IMAGE_NAME }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -40,13 +26,9 @@ jobs:
           npm install
           npm run build
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ghcr.io/whaleopop/anecode-frontend:latest
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.IMAGE_NAME }} .
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,15 +38,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install sshpass
-        run: sudo apt-get install -y sshpass
+      - name: Setup SSH Keys and known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/rsa
+          chmod 600 ~/.ssh/rsa
 
       - name: Add host to known_hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Ensure deploy user exists and configure Docker access
+        
+      - name: Debug SSH Setup
         run: |
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          ls -la ~/.ssh
+          cat ~/.ssh/rsa || echo "SSH private key is invalid or missing"
+
+      - name: Start ssh-agent and add SSH key
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add ~/.ssh/rsa
+
+      - name: Install sshpass
+        run: sudo apt-get install sshpass
+
+      - name: Execute remote commands with sshpass
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD}}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
           if ! id -u deploy_user &>/dev/null; then
             useradd -m deploy_user
             echo "deploy_user:password" | chpasswd
@@ -75,14 +73,22 @@ jobs:
       - name: Stop and delete existing Docker container
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-          if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-frontend$'; then
-            docker stop anecode-frontend && docker rm anecode-frontend
+          if docker ps -a --format '{{.Names}}' | grep -Eq '^docker-db$'; then
+            docker stop docker-db && docker rm docker-db
           fi
           EOF
 
-      - name: Pull and deploy new Docker container
+      - name: Copy Docker image to the remote server and deploy
         run: |
+          # Save the Docker image as a tar file
+          docker save ${{ env.IMAGE_NAME }} | gzip > anecode-frontend.tar.gz
+          
+          # Copy the Docker image tar file to the remote server
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" scp -o StrictHostKeyChecking=no anecode-frontend.tar.gz root@${{ secrets.SSH_HOST }}:/tmp/
+
+          # Load the Docker image on the remote server
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-          docker pull ${{ env.IMAGE_NAME }}:latest
-          docker run -d --name anecode-frontend -p 80:80 ${{ env.IMAGE_NAME }}:latest
+          docker load -i /tmp/anecode-frontend.tar.gz
+          docker rm -f anecode-frontend || true
+          docker run -d --name anecode-frontend -p 80:80 ${{ env.IMAGE_NAME }}
           EOF
