--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "nprogress": "^0.2.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vuex": "^4.0.2"
