--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 
 FROM nginx:1.23
 
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build @/dist /usr/share/nginx/html
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
