--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
 
 FROM nginx:1.23
 
-COPY --from=build @/dist /usr/share/nginx/html
+COPY --from=build ../dist /usr/share/nginx/html
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 8080
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon ofsf;"]
