--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ghcr.io/whaleopop/anecode-backend
 
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,25 +18,80 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3.0.0
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          node-version: 18
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: ${{ env.IMAGE_NAME }}
-          
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ghcr.io/whaleopop/anecode-backend:latest
-          build-args: |
-            DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}
+      - name: Install dependencies and build
+        run: |
+          npm install
+          npm run build
+
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.IMAGE_NAME }}:latest .
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup SSH Keys and known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Add host to known_hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Debug SSH Setup
+        run: |
+          ls -la ~/.ssh
+          cat ~/.ssh/id_rsa || echo "SSH private key is invalid or missing"
+
+      - name: Start ssh-agent and add SSH key
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add -v ~/.ssh/id_rsa
+
+      - name: Install OpenSSH Client and sshpass
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openssh-client sshpass
+
+      - name: Execute remote commands with sshpass to create deploy user and group
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          if ! id -u deploy_user &>/dev/null; then
+            useradd -m deploy_user
+            echo "deploy_user:password" | chpasswd
+            groupadd docker  # Ensure docker group exists
+            usermod -aG docker deploy_user
+          fi
+          EOF
+
+      - name: Stop and delete existing Docker container
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-backend$'; then
+            docker stop anecode-backend && docker rm anecode-backend
+          fi
+          EOF
+
+      - name: Remove old frontend Docker image
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          docker rmi ghcr.io/whaleopop/anecode-backend:latest || true  # Remove the old frontend image
+          EOF
+
+      - name: Pull and deploy new Docker container
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          docker pull ghcr.io/whaleopop/anecode-backend:latest
+          docker run -d --name anecode-backend -p 8000:80 ghcr.io/whaleopop/anecode-backend:latest 
+          EOF
