--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,9 +82,9 @@ jobs:
       #     EOF
 
 
-      - name: Pull and deploy new Docker container
-        run: |
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-          docker pull ghcr.io/whaleopop/anecode-frontend:latest
-          docker run -d --name anecode-frontend -p 8080:80 ghcr.io/whaleopop/anecode-frontend:latest 
-          EOF
+      # - name: Pull and deploy new Docker container
+      #   run: |
+      #     sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+      #     docker pull ghcr.io/whaleopop/anecode-frontend:latest
+      #     docker run -d --name anecode-frontend -p 8080:80 ghcr.io/whaleopop/anecode-frontend:latest 
+      #     EOF
