--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
       - frontend
 
 env:
+  REGISTRY: ghcr.io
   IMAGE_NAME: ghcr.io/whaleopop/anecode-frontend
 
 jobs:
@@ -13,22 +14,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+          - name: Checkout code
+            uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+          - name: Log in to the Container registry
+            uses: docker/login-action@v3.0.0
+            with:
+              registry: ${{ env.REGISTRY }}
+              username: ${{ github.actor }}
+              password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install dependencies and build
-        run: |
-          npm install
-          npm run build
+          - name: Extract metadata (tags, labels) for Docker
+            id: meta
+            uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+            with:
+              images: ${{ env.IMAGE_NAME }}
+              
+          - name: Build and push Docker image
+            uses: docker/build-push-action@v5
+            with:
+              context: .
+              file: ./Dockerfile
+              push: true
+              tags: ghcr.io/whaleopop/anecode-frontend:latest
 
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ env.IMAGE_NAME }}:latest .
+
+      
+          
 
   deploy:
     runs-on: ubuntu-latest
@@ -73,18 +85,18 @@ jobs:
           fi
           EOF
 
-      # - name: Stop and delete existing Docker container
-      #   run: |
-      #     sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-      #     if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-frontend$'; then
-      #       docker stop anecode-frontend && docker rm anecode-frontend
-      #     fi
-      #     EOF
+      - name: Stop and delete existing Docker container
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-frontend$'; then
+            docker stop anecode-frontend && docker rm anecode-frontend
+          fi
+          EOF
 
 
-      # - name: Pull and deploy new Docker container
-      #   run: |
-      #     sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-      #     docker pull ghcr.io/whaleopop/anecode-frontend:latest
-      #     docker run -d --name anecode-frontend -p 8080:80 ghcr.io/whaleopop/anecode-frontend:latest 
-      #     EOF
+      - name: Pull and deploy new Docker container
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          docker pull ghcr.io/whaleopop/anecode-frontend:latest
+          docker run -d --name anecode-frontend -p 8080:80 ghcr.io/whaleopop/anecode-frontend:latest 
+          EOF 
