--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,13 +85,13 @@ jobs:
           fi
           EOF
 
-      # - name: Stop and delete existing Docker container
-      #   run: |
-      #     sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-      #     if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-frontend$'; then
-      #       docker stop anecode-frontend && docker rm anecode-frontend
-      #     fi
-      #     EOF
+      - name: Stop and delete existing Docker container
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-frontend$'; then
+            docker stop anecode-frontend && docker rm anecode-frontend
+          fi
+          EOF
 
 
       # - name: Pull and deploy new Docker container
