--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,6 @@ jobs:
 
 
       
-          
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -76,7 +74,7 @@ jobs:
 
       - name: Execute remote commands with sshpass to create deploy user and group
         run: |
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} <<EOF
           if ! id -u deploy_user &>/dev/null; then
             useradd -m deploy_user
             echo "deploy_user:password" | chpasswd
@@ -87,16 +85,15 @@ jobs:
 
       - name: Stop and delete existing Docker container
         run: |
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} <<EOF
           if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-frontend$'; then
             docker stop anecode-frontend && docker rm anecode-frontend
           fi
           EOF
 
-
       - name: Pull and deploy new Docker container
         run: |
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} <<EOF
           docker pull ghcr.io/whaleopop/anecode-frontend:latest
-          docker run -d --name anecode-frontend -p 8080:8080 ghcr.io/whaleopop/anecode-frontend:latest 
-          EOF 
+          docker run -d --name anecode-frontend -p 8080:8080 ghcr.io/whaleopop/anecode-frontend:latest
+          EOF
