--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ghcr.io/whaleopop/rest-db
+  IMAGE_NAME: ghcr.io/whaleopop/anecode-rest-db
 
 jobs:
   build:
@@ -74,8 +74,8 @@ jobs:
       - name: Stop and delete existing Docker container
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
-          if docker ps -a --format '{{.Names}}' | grep -Eq '^rest-db$'; then
-            docker stop rest-db && docker rm rest-db
+          if docker ps -a --format '{{.Names}}' | grep -Eq '^anecode-rest-db$'; then
+            docker stop anecode-rest-db && docker rm anecode-rest-db
           fi
           EOF
 
@@ -83,5 +83,5 @@ jobs:
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no root@${{ secrets.SSH_HOST }} << 'EOF'
           docker pull ${{ env.IMAGE_NAME }}:
-          docker run -e MYSQL_USER=root -e MYSQL_PASSWORD=${{secrets.SSH_PASSWORD}} -e MYSQL_HOST=${{ secrets.SSH_HOST }} -e MYSQL_DB=${{secrets.MYSQL_DB}} -d --name rest-db -p 8889:8889 ${{ env.IMAGE_NAME }}:lastest
+          docker run -e MYSQL_USER=root -e MYSQL_PASSWORD=${{secrets.SSH_PASSWORD}} -e MYSQL_HOST=${{ secrets.SSH_HOST }} -e MYSQL_DB=${{secrets.MYSQL_DB}} -d --name anecode-rest-db -p 8889:8889 ${{ env.IMAGE_NAME }}:lastest
           EOF
