--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - DATABASE_URL=mysql+pymysql://root:${{secrets.MYSQL_PASSWORD}}@${{ secrets.MYSQL_HOST }}:3306/${{secrets.MYSQL_DB}}
     depends_on:
       - anecode-db
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8889
 
   anecode-db:
     image: mysql:8.0
