--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-fastapi==0.103.1
-uvicorn==0.23.2
-sqlalchemy==2.0.20
-pydantic==1.10.12
+FastAPI==0.92.1
+uvicorn==0.20.0
+sqlalchemy==1.4.39
+Pydantic==1.9.3
 bcrypt==4.2.0
 PyMySQL==1.1.1
+
+
+
+
+
+
